--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           node-version: '16.x'
       - name: Install Dependencies
-        run: npm i
+        run: cd client && npm i
       - name: deploy
         run: npm run deploy
