cd into frontend 2

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Install Dependencies
         run: cd client && npm i
       - name: deploy
-        run: npm run deploy
+        run: cd client && npm run deploy
