--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -14,4 +14,4 @@ jobs:
         with:
           node-version: '16.x'
       - name: deploy
-        run: CI=false cd client && npm i && npm run deploy
+        run: cd client && npm i && CI=false npm run deploy
