--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -16,4 +16,4 @@ jobs:
           author_name: github-actions[bot]
           author_email: github-actions[bot]@users.noreply.github.com
       - name: deploy
-        run: git config user.name '${GITHUB_ACTOR}' && git config user.email '${GITHUB_ACTOR}@users.noreply.github.com' && cd client && npm i && CI=false npm run deploy
+        run: git config --global url.ssh://git@github.com/.insteadOf https://github.com/ && git config user.name '${GITHUB_ACTOR}' && git config user.email '${GITHUB_ACTOR}@users.noreply.github.com' && cd client && npm i && CI=false npm run deploy
