--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,7 +13,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '16.x'
-          author_name: github-actions[bot]
-          author_email: github-actions[bot]@users.noreply.github.com
+          github-token: ${{secrets.ADMIN_GITHUB_TOKEN}}
+          # author_name: github-actions[bot]
+          # author_email: github-actions[bot]@users.noreply.github.com
       - name: deploy
         run: git config --global url.ssh://git@github.com/.insteadOf https://github.com/ && git config user.name '${GITHUB_ACTOR}' && git config user.email '${GITHUB_ACTOR}@users.noreply.github.com' && cd client && npm i && CI=false npm run deploy
