--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,10 +13,15 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '16.x'
-          github-token: ${{secrets.ADMIN_GITHUB_TOKEN}}
-          author_name: github-actions[bot]
-          author_email: github-actions[bot]@users.noreply.github.com
+      - run: cd client
+      - run: npm install
+      - run: npm run build
+      - run: npm test
+      - name: Deploy
+        uses: crazy-max/ghaction-github-pages@v1
+        with: 
+          target-branch: gh-pages
+          build-dir: build
         env:
-          GITHUB_TOKEN: ${{secrets.ADMIN_GITHUB_TOKEN}}
-      - name: deploy
-        run: git config --global url.ssh://git@github.com/.insteadOf https://github.com/ && git config user.name '${GITHUB_ACTOR}' && git config user.email '${GITHUB_ACTOR}@users.noreply.github.com' && cd client && npm i && CI=false npm run deploy
+          GITHUB-TOKEN: ${{ secrets.GITHUB_REPO_TOKEN }}
+        # run: git config --global url.ssh://git@github.com/.insteadOf https://github.com/ && git config user.name '${GITHUB_ACTOR}' && git config user.email '${GITHUB_ACTOR}@users.noreply.github.com' && cd client && npm i && CI=false npm run deploy
