--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,10 +13,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '16.x'
-      - run: cd client
-      - run: npm install
-      - run: npm run build
-      - run: npm test
+      - run: cd client && npm install ** npm run build && npm test
       - name: Deploy
         uses: crazy-max/ghaction-github-pages@v1
         with: 
