--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,12 +13,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '16.x'
-      - run: cd client && npm install ** npm run build && npm test
-      - name: Deploy
-        uses: crazy-max/ghaction-github-pages@v1
-        with: 
-          target-branch: gh-pages
-          build-dir: build
+      - name: deploy
+        with:
+          github-token: ${{secrets.ADMIN_GITHUB_TOKEN}}
+          author_name: github-actions[bot]
+          author_email: github-actions[bot]@users.noreply.github.com
         env:
-          GITHUB-TOKEN: ${{ secrets.GITHUB_REPO_TOKEN }}
-        # run: git config --global url.ssh://git@github.com/.insteadOf https://github.com/ && git config user.name '${GITHUB_ACTOR}' && git config user.email '${GITHUB_ACTOR}@users.noreply.github.com' && cd client && npm i && CI=false npm run deploy
+          GITHUB_TOKEN: ${{secrets.ADMIN_GITHUB_TOKEN}}
+        run: git config --global url.ssh://git@github.com/.insteadOf https://github.com/ && git config user.name '${GITHUB_ACTOR}' && git config user.email '${GITHUB_ACTOR}@users.noreply.github.com' && cd client && npm i && CI=false npm run deploy
