--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,13 +9,11 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
-      - name: deploy
+      - name: Use Node.js
         uses: actions/setup-node@v1
         with:
           node-version: '16.x'
-          github-token: ${{secrets.ADMIN_GITHUB_TOKEN}}
-          author_name: github-actions[bot]
-          author_email: github-actions[bot]@users.noreply.github.com
+      - name: deploy
         env:
           GITHUB_TOKEN: ${{secrets.ADMIN_GITHUB_TOKEN}}
         run: git config --global url.ssh://git@github.com/.insteadOf https://github.com/ && git config user.name '${GITHUB_ACTOR}' && git config user.email '${GITHUB_ACTOR}@users.noreply.github.com' && cd client && npm i && CI=false npm run deploy
