--- a/firebase.json
+++ b/firebase.json
@@ -5,11 +5,7 @@
   },
   "hosting": {
     "public": "client/build",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
         "source": "**",
